initial trial for spotcorna medicalmap, no user login
